--- a/.gitignore
+++ b/.gitignore
@@ -85,6 +85,12 @@ target/
 profile_default/
 ipython_config.py
 
+# Ignore virtual environment folder
+functions/venv/
+
+# Ignore firebase debug logs
+firebase-debug.log
+
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
 #   intended to run in multiple environments; otherwise, check them in:
